# Bangumi-Recorder

./: .env.example  API.md  Cargo.toml  OpenAPI.yaml  README.md  build.rs  open.yaml
.sqlx/: query-01d5a55fe7c2adad2f7cbc5b13013c4a048c5c99c5ff14d57bb21b691a44df88.json  query-035d92a7e4e914d2f3a683b22d94922daa2183e4d7c7cb0cac95b69d58892cea.json  query-05495483dcee3f4d7d153cf148e7c98228e09578e6d5efb2e6b8a99b59cbec3c.json  query-0601dc10d420fab746902318e8c021839f5af148c645b84c0845c2cac0d0efd5.json  query-0697f5740a04a4cdf93dcefd968fe91c8207946a91d528892f1e62f7c4e4c011.json  query-0703e147168292375f9d78f2b702d887022ea6ba977b693d6b3b2e274289434f.json  query-0de5585362dc0f66bcbf6bfbd43aff1ccd20bd94572f5d129cc6fafe800efd34.json  query-1001abef88bf47a169b2c4970f7592fe151f2cc46e7cf9d1798f2913d3380838.json  query-11369194b9030569ee1adf472d990ff0cfbbaa1f1b86e49e731cf01f92991f93.json  query-13be27f15ffa00fb681d97da007de4be0af69a40502c2730adebcdc8473d16b1.json  query-168ddb5aed1c123ad50d3b2753c6b813c814caaf067efd0ccd5f6c667415436d.json  query-183503b6d214f187f9981b687195ce8e52bd31c43dcc82258ed5c660cb39384a.json  query-18c488818235bdca0a1a4f2a3f5e4c05bb2bfb6e2aa6f5cf09c9054b44e7ddd6.json  query-24e8dbaa97149ce912eeada87ab2c8e84cdcb4e560dcd155a940d2a476b486d0.json  query-260956353e68fa355d5ee098f1908dcac0ebb5f7f1ab00d07cf83bedfc1d9aba.json  query-26ec98795ec11033eaebf09a6f31c0a028bce0d3c1953cfd545988cb2113bdac.json  query-27926d0d326d0bdad795896682a3bf7c30ffb021c687cfb6abcd614f9aa0af2a.json  query-2969d74e05a90f9638de910ad759a724563ff316f26079fc4b1e27aa4d2ed5fa.json  (+123 more)
src/: main.rs  (+1 more)
(+149 files in other folders)
