[package]
name = "Bangumi-Recorder"
version = "1.0.2"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["multipart", "macros"] }
chrono = { version = "0.4.41", features = ["serde"] }
log = "0.4"
tokio = {version = "1", features=["full"] }
sqlx = { version = "0.8", features = [ "runtime-tokio", "mysql", "chrono", "rust_decimal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0"
reqwest = { version = "0.12.4", features = ["json"] }
dotenvy = "0.15.7"
uuid = { version = "1.0", features = ["v4", "v7"] }
env_logger = "0.11"
jsonwebtoken = "9"
bcrypt = "0.15"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
argon2 = "0.5.3"
scraper = "0.26.0"
regex = "1.12.3"
urlencoding = "2.1.3"
http = "1"
sha2 = "0.10"
rust-embed = "8"
clap = { version = "4", features = ["derive"] }
